<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/left_menu_LinkedIn"
            />

        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/jobSearch"/>

        <item
            android:id="@+id/drawer_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/delete"/>

        <item
            android:id="@+id/drawer_flim"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/flim"/>

        <item
            android:id="@+id/drawer_winzin"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/winzin"/>

    </group>
</menu>